@@ -1,3 +1,7 @@
+drkns 06.04.2017 07:53:14 +0000 - build 4932
+
+1. Не работал вайп пустых файлов.
+
 drkns 05.04.2017 20:10:41 +0000 - build 4931
 
 1. Уточнение 4928.
